Fixes navigation alignment issue, ticket DT-702

--- a/stylesheet.less
+++ b/stylesheet.less
@@ -66,7 +66,6 @@ body {
         }
         ul {
             display: table;
-            float: none;
             margin: 0 auto;
             text-align: center;
             padding: 0;
